Added Mongoose Schema

--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "Shivam Vijaywargi",
   "license": "MIT",
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.9.25",
+    "morgan": "^1.10.0"
   }
 }
